fix: add dark mode background for shiki and inline code

--- a/src/style.css
+++ b/src/style.css
@@ -23,8 +23,11 @@
     font-style: var(--shiki-light-font-style);
     font-weight: var(--shiki-light-font-weight);
     text-decoration: var(--shiki-light-text-decoration);
+  }
 
-    .nightMode & {
+  .nightMode & {
+    background: var(--shiki-dark-bg);
+    span {
       color: var(--shiki-dark);
       font-style: var(--shiki-dark-font-style);
       font-weight: var(--shiki-dark-font-weight);
@@ -125,6 +128,11 @@
   border: 1px solid var(--border-subtle);
   border-radius: var(--border-radius);
   padding: 0.15em 0.25em;
+
+  background-color: var(--shiki-light-bg);
+  .nightMode & {
+    background: var(--shiki-dark-bg);
+  }
 }
 
 
